--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,4 @@ authors = ["Christian Poveda <git@christianpoveda.xyz>"]
 edition = "2018"
 
 [dependencies]
-thiserror = "1.0"
-
-[dev-dependencies.cargo-husky]
-version = "1"
-default-features = false # Disable features which are enabled by default
-features = ["precommit-hook", "run-cargo-fmt"]
+nom = "5.1.1"
