--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 nom = "5.1.1"
 nom_locate = "2.0.0"
 thiserror = "1.0"
+codespan-reporting = "0.9.4"
 
 [dev-dependencies]
 criterion = "0.3"
