Change options in .travis.yml
We don't need sudo
We can cache build results
We can at least try to compile the benchmarks

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,15 @@
+sudo: false
+
 language: rust
 rust:
   - nightly
+
+cache: cargo
+
 jobs:
   fast_finish: true
+
+script:
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo bench --verbose --no-run
