--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: rust
 rust:
+  - stable
+  - beta
   - nightly
 
 cache: cargo
 
 jobs:
+  allow_failures:
+    - rust: nightly
   fast_finish: true
 
 script:
