--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -12,13 +12,13 @@ jobs:
             - uses: actions/checkout@v2
             - run: rustup toolchain update stable && rustup default stable
             - name: Run benchmark
-              run: cargo nightly bench -- --output-format bencher | tee output.txt
+              run: cargo bench -- --output-format bencher | tee output.txt
             - name: Store benchmark result
               uses: rhysd/github-action-benchmark@v1.8.0
               with:
                   name: Rust Benchmark
                   tool: 'cargo'
-                  output-file-path: examples/criterion-rs/output.txt
+                  output-file-path: output.txt
                   # Use personal access token instead of GITHUB_TOKEN due to https://github.community/t5/GitHub-Actions/Github-action-not-triggering-gh-pages-upon-push/td-p/26869/highlight/false
                   github-token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
                   auto-push: true
