--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -12,7 +12,7 @@ jobs:
             - uses: actions/checkout@v2
             - run: rustup toolchain update stable && rustup default stable
             - name: Run benchmark
-              run: cargo bench -- --output-format bencher | tee output.txt
+              run: cargo bench --bench eval -- --output-format bencher | tee output.txt
             - name: Store benchmark result
               uses: rhysd/github-action-benchmark@v1.8.0
               with:
