--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ nom = "5.1.1"
 nom_locate = "2.0.0"
 thiserror = "1.0"
 codespan-reporting = "0.9.4"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 criterion = "0.3"
