--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ nom = "5.1.1"
 nom_locate = "2.0.0"
 thiserror = "1.0"
 codespan-reporting = "0.9.4"
-lazy_static = "1.4.0"
+once_cell = "1.4.0"
 pijama_ast = { path = "src/pijama_ast", version = "0.1.0" }
 structopt = "0.3.14"
 
