--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pijama"
 version = "0.1.0"
-authors = ["Christian Poveda <git@christianpoveda.xyz>"]
+authors = ["The Pijama Project Developers"]
 edition = "2018"
 
 [dependencies]
