--- a/src/pijama_ast/Cargo.toml
+++ b/src/pijama_ast/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pijama_ast"
 version = "0.1.0"
-authors = ["Christian Poveda <git@christianpoveda.xyz>", "Sean Chen <seanchen11235@gmail.com>"]
+authors = ["The Pijama Project Developers"]
 edition = "2018"
 
 [dependencies]
