--- a/pijama_driver/Cargo.toml
+++ b/pijama_driver/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 thiserror = "1.0"
 pijama_ast = { path = "../pijama_ast", version = "0.1.0" }
+pijama_parser = { path = "../pijama_parser", version = "0.1.0" }
 pijama_core = { path = "../pijama_core", version = "0.1.0" }
 
 [dev-dependencies]
