--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,11 @@
 members = [
     "pijama_ast",
     "pijama_parser",
-    "pijama_core",
+    "pijama_ty",
+    "pijama_mir",
+    "pijama_tycheck",
+    "pijama_lir",
+    "pijama_machine",
     "pijama_driver",
     "pijama",
 ]
