--- a/pijama_driver/Cargo.toml
+++ b/pijama_driver/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2018"
 
 [dependencies]
 thiserror = "1.0"
-pijama_ast = { path = "../pijama_ast", version = "0.1.0" }
-pijama_parser = { path = "../pijama_parser", version = "0.1.0" }
-pijama_core = { path = "../pijama_core", version = "0.1.0" }
+pijama_ast = { path = "../pijama_ast" }
+pijama_parser = { path = "../pijama_parser" }
+pijama_ty = { path = "../pijama_ty" }
+pijama_mir = { path = "../pijama_mir" }
+pijama_tycheck = { path = "../pijama_tycheck" }
+pijama_lir = { path = "../pijama_lir" }
+pijama_machine = { path = "../pijama_machine" }
 
 [dev-dependencies]
 criterion = "0.3"
