--- a/pijama_driver/Cargo.toml
+++ b/pijama_driver/Cargo.toml
@@ -13,6 +13,8 @@ pijama_mir = { path = "../pijama_mir" }
 pijama_tycheck = { path = "../pijama_tycheck" }
 pijama_lir = { path = "../pijama_lir" }
 pijama_machine = { path = "../pijama_machine" }
+pijama_codegen = { path = "../pijama_codegen" }
+pijama_vm = { path = "../pijama_vm" }
 
 [dev-dependencies]
 criterion = "0.3"
