--- a/pijama_vm/Cargo.toml
+++ b/pijama_vm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pijama_vm"
 version = "0.1.0"
-authors = ["Christian Poveda <git@christianpoveda.xyz>"]
+authors = ["The Pijama Project Developers"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
