--- a/pijama_mir/Cargo.toml
+++ b/pijama_mir/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 thiserror = "1.0"
 pijama_ast = {path = "../pijama_ast"}
 pijama_ty = {path = "../pijama_ty"}
+pijama_common = { path = "../pijama_common" }
