--- a/pijama_tycheck/Cargo.toml
+++ b/pijama_tycheck/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 
 [dependencies]
 thiserror = "1.0"
-pijama_ast = {path = "../pijama_ast"}
 pijama_mir = {path = "../pijama_mir"}
 pijama_ty = {path = "../pijama_ty"}
+pijama_common = {path = "../pijama_common"}
