--- a/pijama_driver/Cargo.toml
+++ b/pijama_driver/Cargo.toml
@@ -10,6 +10,7 @@ pijama_ast = { path = "../pijama_ast" }
 pijama_parser = { path = "../pijama_parser" }
 pijama_ty = { path = "../pijama_ty" }
 pijama_hir = { path = "../pijama_hir" }
+pijama_mir = { path = "../pijama_mir" }
 pijama_tycheck = { path = "../pijama_tycheck" }
 pijama_lir = { path = "../pijama_lir" }
 pijama_machine = { path = "../pijama_machine" }
