--- a/pijama_ty/Cargo.toml
+++ b/pijama_ty/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["The Pijama Project Developers"]
 edition = "2018"
 
 [dependencies]
-pijama_ast = {path = "../pijama_ast"}
+pijama_common = {path = "../pijama_common"}
