--- a/pijama_common/Cargo.toml
+++ b/pijama_common/Cargo.toml
@@ -4,6 +4,5 @@ version = "0.1.0"
 authors = ["Christian Poveda <git@christianpoveda.xyz>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+thiserror = "1.0"
