--- a/pijama_hir/Cargo.toml
+++ b/pijama_hir/Cargo.toml
@@ -9,3 +9,4 @@ thiserror = "1.0"
 pijama_ast = {path = "../pijama_ast"}
 pijama_ty = {path = "../pijama_ty"}
 pijama_common = { path = "../pijama_common" }
+pijama_ctx = { path = "../pijama_ctx" }
