--- a/pijama_driver/Cargo.toml
+++ b/pijama_driver/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 thiserror = "1.0"
 pijama_ast = { path = "../pijama_ast" }
+pijama_ctx = { path = "../pijama_ctx" }
 pijama_parser = { path = "../pijama_parser" }
 pijama_ty = { path = "../pijama_ty" }
 pijama_hir = { path = "../pijama_hir" }
