specialize print behaviour using type information

--- a/pijama_lir/Cargo.toml
+++ b/pijama_lir/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 pijama_hir = {path = "../pijama_hir"}
 pijama_common = { path = "../pijama_common" }
 pijama_ctx = { path = "../pijama_ctx" }
+pijama_ty = { path = "../pijama_ty" }
