--- a/pijama_driver/Cargo.toml
+++ b/pijama_driver/Cargo.toml
@@ -16,6 +16,7 @@ pijama_tycheck = { path = "../pijama_tycheck" }
 pijama_lir = { path = "../pijama_lir" }
 pijama_machine = { path = "../pijama_machine" }
 pijama_common = { path = "../pijama_common" }
+pijama_codegen = { path = "../pijama_codegen" }
 
 [dev-dependencies]
 criterion = "0.3"
