--- a/pijama_codegen/Cargo.toml
+++ b/pijama_codegen/Cargo.toml
@@ -9,3 +9,4 @@ pijama_ctx = { path = "../pijama_ctx" }
 pijama_mir = { path = "../pijama_mir" }
 pijama_ty = { path = "../pijama_ty" }
 pijama_common = { path = "../pijama_common" }
+pijama_vm = { path = "../pijama_vm" }
